[skip ci] Fix eventdb DB name

--- a/install/automated/kubernetes/manifests/001-configmap.yaml
+++ b/install/automated/kubernetes/manifests/001-configmap.yaml
@@ -128,7 +128,7 @@ data:
           eventDB:
               enable: true
               database:
-                  dsn: "mysql:host=mariadb-eventdb-svc;dbname=openvk-eventdb"
+                  dsn: "mysql:host=mariadb-eventdb-svc;dbname=openvk_eventdb"
                   user: "openvk"
                   password: "openvk"
           notificationsBroker:
