--- a/install/automated/docker/docker-compose.yml
+++ b/install/automated/docker/docker-compose.yml
@@ -19,7 +19,8 @@ services:
       - acl_handler
       - mariadb-primary
       - mariadb-eventdb
-  
+      - kafka
+
   acl_handler:
     image: docker.io/alpine:edge
     container_name: acl_handler
@@ -45,7 +46,7 @@ services:
       - MARIADB_USER=openvk
       - MARIADB_PASSWORD=openvk
       - MARIADB_RANDOM_ROOT_PASSWORD=yes
-  
+
   mariadb-eventdb:
     image: ghcr.io/openvk/openvk/mariadb:10.9-eventdb
     container_name: mariadb-eventdb
@@ -57,7 +58,25 @@ services:
       - MARIADB_USER=openvk
       - MARIADB_PASSWORD=openvk
       - MARIADB_RANDOM_ROOT_PASSWORD=yes
-  
+
+  kafka:
+    image: docker.io/bitnami/kafka:3.2
+    container_name: kafka
+    restart: unless-stopped
+    volumes:
+      - kafka-data:/bitnami
+    environment:
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_ENABLE_KRAFT=yes
+      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_BROKER_ID=1
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@127.0.0.1:9093
+
   phpmyadmin:
     image: docker.io/phpmyadmin:5
     container_name: phpmyadmin
@@ -70,7 +89,7 @@ services:
       - PMA_PASSWORD=openvk
       - PMA_PORT=3306
       - PMA_ARBITRARY=1
-  
+
   adminer:
     image: docker.io/adminer:4
     container_name: adminer
@@ -88,3 +107,4 @@ volumes:
   openvk-logs:
   mariadb-primary:
   mariadb-eventdb:
+  kafka-data:
