--- a/Web/static/js/package.json
+++ b/Web/static/js/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@atlassian/aui": "^8.5.1",
     "create-react-class": "^15.7.0",
+    "handlebars": "^4.7.7",
     "jquery": "^2.1.0",
     "knockout": "^3.5.1",
     "ky": "^0.19.0",
@@ -15,6 +16,7 @@
     "requirejs": "^2.3.6",
     "soundjs": "^1.0.1",
     "textfit": "^2.4.0",
+    "tippy.js": "^6.3.7",
     "umbrellajs": "^3.1.0"
   }
 }
