--- a/themepacks/openvk_modern/theme.yml
+++ b/themepacks/openvk_modern/theme.yml
@@ -7,5 +7,6 @@ metadata:
         _: "OpenVK Modern"
         en: "OpenVK Modern"
         ru: "OpenVK Modern"
+        uk: "OpenVK Modern"
     author: "Mikita Wiśniewski (rudzik8)"
     description: "OpenVK theme in modern style"
