--- a/themepacks/midnight/theme.yml
+++ b/themepacks/midnight/theme.yml
@@ -7,5 +7,6 @@ metadata:
         _: "OpenVK Midnight"
         en: "OpenVK Midnight"
         ru: "OpenVK Midnight"
+        uk: "OpenVK Midnight"
     author: "Ilya Prokopenko"
     description: "A dark theme for OpenVK"
