--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -273,6 +273,10 @@ routes:
       handler: "Apps->edit"
     - url: "/apps/uninstall"
       handler: "Apps->unInstall"
+    - url: "/poll{num}"
+      handler: "Poll->view"
+    - url: "/poll{num}/voters"
+      handler: "Poll->voters"
     - url: "/admin"
       handler: "Admin->index"
     - url: "/admin/users"
