--- a/Web/di.yml
+++ b/Web/di.yml
@@ -23,9 +23,11 @@ services:
     - openvk\Web\Presenters\AppsPresenter
     - openvk\Web\Presenters\ThemepacksPresenter
     - openvk\Web\Presenters\VKAPIPresenter
+    - openvk\Web\Presenters\PollPresenter
     - openvk\Web\Presenters\BannedLinkPresenter
     - openvk\Web\Models\Repositories\Users
     - openvk\Web\Models\Repositories\Posts
+    - openvk\Web\Models\Repositories\Polls
     - openvk\Web\Models\Repositories\Photos
     - openvk\Web\Models\Repositories\Albums
     - openvk\Web\Models\Repositories\Clubs
