--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -323,6 +323,12 @@ routes:
       handler: "VKAPI->tokenLogin"
     - url: "/admin/sandbox"
       handler: "About->sandbox"
+    - url: "/admin/chandler/groups"
+      handler: "Admin->chandlerGroups"
+    - url: "/admin/chandler/groups/{slug}"
+      handler: "Admin->chandlerGroup"
+    - url: "/admin/chandler/users/{slug}"
+      handler: "Admin->chandlerUser"
     - url: "/internal/wall{num}"
       handler: "Wall->wallEmbedded"
     - url: "/robots.txt"
