--- a/Web/di.yml
+++ b/Web/di.yml
@@ -47,4 +47,5 @@ services:
     - openvk\Web\Models\Repositories\ContentSearchRepository
     - openvk\Web\Models\Repositories\Aliases
     - openvk\Web\Models\Repositories\BannedLinks
+    - openvk\Web\Models\Repositories\ChandlerGroups
     - openvk\Web\Presenters\MaintenancePresenter
