Experiment(Photo): add "quick" image saving method to increase teh upload speedz
если это сработает то я буду ржать :)

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -18,7 +18,8 @@ openvk:
             forbiddenNames:
                 - "index.php"
         photos:
-            upgradeStructure: true
+            upgradeStructure: false
+            photoSaving: "quick"
         apps:
             withdrawTax: 8
         security:
