--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -163,6 +163,8 @@ routes:
       handler: "Photos->uploadPhoto"
     - url: "/photo{num}_{num}"
       handler: "Photos->photo"
+    - url: "/photos/thumbnails/{num}_{text}.jpeg"
+      handler: "Photos->thumbnail"
     - url: "/photos/{text}"
       handler: "Photos->absolutePhoto"
     - url: "/photo{num}_{num}/edit"
