--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -341,6 +341,8 @@ routes:
       handler: "About->humansTxt"
     - url: "/dev"
       handler: "About->dev"
+    - url: "/iapi/getPhotosFromPost/{text}"
+      handler: "InternalAPI->getPhotosFromPost"
     - url: "/{?shortCode}"
       handler: "UnknownTextRouteStrategy->delegate"
       placeholders:
