Global: Add ~~euro~~tour to the website
Co-authored-by: Daniel <60743585+myslivets@users.noreply.github.com>

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -345,6 +345,8 @@ routes:
       handler: "About->humansTxt"
     - url: "/dev"
       handler: "About->dev"
+    - url: "/tour"
+      handler: "About->tour"
     - url: "/{?shortCode}"
       handler: "UnknownTextRouteStrategy->delegate"
       placeholders:
