--- a/.github/workflows/codeberg-mirror.yml
+++ b/.github/workflows/codeberg-mirror.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: pixta-dev/repository-mirroring-action@v1
         with:
           target_repo_url: "git@codeberg.org:openvk/openvk.git"
-          ssh_private_key: ${{ secrets.CODEBERG_PRIVSSH }}
+          ssh_private_key: ${{ secrets.CODEBERG_MIRRORSSH }}
