--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -93,6 +93,8 @@ routes:
       handler: "User->increaseRating"
     - url: "/id{num}"
       handler: "User->view"
+    - url: "/id{num}/getOwnedClubs"
+      handler: "User->ownedClubs"
     - url: "/friends{num}"
       handler: "User->friends"
     - url: "/edit"
