Auth: Add disabling the password reset page

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -28,6 +28,7 @@ openvk:
             forcePhoneVerification: false
             forceEmailVerification: false
             forceStrongPassword: false
+            disablePasswordRestoring: true # turn this off if you have configured e-mail sending correctly
             enableSu: true
             rateLimits:
                 actions: 5
