Videos: Add upload disabling

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -20,6 +20,8 @@ openvk:
         photos:
             upgradeStructure: false
             photoSaving: "quick"
+        videos:
+            disableUploading: false
         apps:
             withdrawTax: 8
         security:
