--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -105,6 +105,10 @@ routes:
       handler: "Group->sub"
     - url: "/setSub/v4/club"
       handler: "Group->attend"
+    - url: "/removeFromBl"
+      handler: "Blacklist->removeFromBlacklist"
+    - url: "/addToBl"
+      handler: "Blacklist->addToBlacklist"
     - url: "/groups/{num}/setNewOwner/{num}"
       handler: "Group->changeOwner"
     - url: "/comment{num}/like"
