--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -201,6 +201,10 @@ routes:
       handler: "Group->admin"
     - url: "/club{num}/setAdmin"
       handler: "Group->modifyAdmin"
+    - url: "/club{num}/delete"
+      handler: "Group->delete"
+    - url: "/club{num}/restore"
+      handler: "Group->restore"
     - url: "/groups{num}"
       handler: "User->groups"
     - url: "/groups_pin"
@@ -297,6 +301,10 @@ routes:
       handler: "Admin->clubs"
     - url: "/admin/clubs/id{num}"
       handler: "Admin->club"
+    - url: "/admin/clubs/id{num}/ban"
+      handler: "Admin->banClub"
+    - url: "/admin/clubs/id{num}/unban"
+      handler: "Admin->unbanClub"
     - url: "/admin/vouchers"
       handler: "Admin->vouchers"
     - url: "/admin/vouchers/id{num}"
