--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -43,6 +43,18 @@ routes:
       handler: "About->donate"
     - url: "/kb/{slug}"
       handler: "Support->knowledgeBaseArticle"
+    - url: "/faq{num}"
+      handler: "Support->FAQArticle"
+    - url: "/faqs{num}"
+      handler: "Support->FAQCategory"
+    - url: "/new_faq"
+      handler: "Support->FAQNewArticle"
+    - url: "/new_faq_cat"
+      handler: "Support->FAQNewCategory"
+    - url: "/al_helpdesk/{num}/delete"
+      handler: "Support->FAQDeleteArticle"
+    - url: "/al_helpdesk_cat/{num}/delete"
+      handler: "Support->FAQDeleteCategory"
     - url: "/about:{?!productName}"
       handler: "About->version"
       placeholders:
