--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -35,6 +35,18 @@ routes:
       handler: "Support->agent"
     - url: "/support/agent{num}/edit"
       handler: "Support->editAgent"
+    - url: "/al_helpdesk/get_templates_dirs"
+      handler: "Support->getTemplatesDirs"
+    - url: "/al_helpdesk/td{num}/templates"
+      handler: "Support->getTemplatesInDir"
+    - url: "/al_helpdesk/create_templates_dir"
+      handler: "Support->createTemplatesDir"
+    - url: "/support/templates"
+      handler: "Support->templates"
+    - url: "/support/templates_dir{num}/delete"
+      handler: "Support->deleteDir"
+    - url: "/support/template{num}/delete"
+      handler: "Support->deleteTemplate"
     - url: "/language"
       handler: "About->language"
     - url: "/language/{text}.js"
