--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -325,6 +325,12 @@ routes:
       handler: "Admin->bannedLink"
     - url: "/admin/bannedLink/id{num}/unban"
       handler: "Admin->unbanLink"
+    - url: "/admin/translation"
+      handler: "Admin->translation"
+    - url: "/translation.php"
+      handler: "Admin->translation"
+    - url: "/admin/translate"
+      handler: "Admin->translateKey"
     - url: "/upload/photo/{text}"
       handler: "VKAPI->photoUpload"
     - url: "/method/{text}.{text}"
