--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -311,9 +311,9 @@ routes:
       handler: "Report->list"
     - url: "/admin/report{num}"
       handler: "Report->view"
-    - url: "/admin/support/report{num}"
+    - url: "/admin/report{num}"
       handler: "Report->view"
-    - url: "/admin/support/reportAction{num}"
+    - url: "/admin/reportAction{num}"
       handler: "Report->action"
     - url: "/report/{num}"
       handler: "Report->create"
@@ -323,6 +323,8 @@ routes:
       handler: "Admin->bannedLink"
     - url: "/admin/bannedLink/id{num}/unban"
       handler: "Admin->unbanLink"
+    - url: "/admin/user{num}/bans"
+      handler: "Admin->bansHistory"
     - url: "/upload/photo/{text}"
       handler: "VKAPI->photoUpload"
     - url: "/method/{text}.{text}"
