Wall: add early suggestions

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -201,6 +201,10 @@ routes:
       handler: "Group->admin"
     - url: "/club{num}/setAdmin"
       handler: "Group->modifyAdmin"
+    - url: "/club{num}/suggested"
+      handler: "Group->suggestedThisUser"
+    - url: "/club{num}/suggested/all"
+      handler: "Group->suggestedAll"
     - url: "/groups{num}"
       handler: "User->groups"
     - url: "/groups_pin"
