--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -349,6 +349,10 @@ routes:
       handler: "About->dev"
     - url: "/tour"
       handler: "About->tour"
+    - url: "/editdb"
+      handler: "Geodb->index"
+    - url: "/geodb"
+      handler: "Geodb->forUser"
     - url: "/{?shortCode}"
       handler: "UnknownTextRouteStrategy->delegate"
       placeholders:
