--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -102,6 +102,7 @@ openvk:
             fartscroll: false
             testLabel: false
         defaultMobileTheme: ""
+        logs: true
     
     telemetry:
         plausible:
