--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -137,6 +137,8 @@ routes:
       handler: "Wall->delete"
     - url: "/wall{num}_{num}/pin"
       handler: "Wall->pin"
+    - url: "/wall{num}_{num}/nearest"
+      handler: "Wall->nearest"
     - url: "/blob_{text}/{?path}.{text}"
       handler: "Blob->file"
       placeholders:
