--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -353,6 +353,10 @@ routes:
       handler: "Admin->chandlerGroup"
     - url: "/admin/chandler/users/{slug}"
       handler: "Admin->chandlerUser"
+    - url: "/noSpam"
+      handler: "NoSpam->index"
+    - url: "/al_abuse/search"
+      handler: "NoSpam->search"
     - url: "/internal/wall{num}"
       handler: "Wall->wallEmbedded"
     - url: "/robots.txt"
