--- a/Web/di.yml
+++ b/Web/di.yml
@@ -51,3 +51,4 @@ services:
     - openvk\Web\Models\Repositories\BannedLinks
     - openvk\Web\Models\Repositories\ChandlerGroups
     - openvk\Web\Presenters\MaintenancePresenter
+    - openvk\Web\Presenters\NoSpamPresenter
