Remove repeated code, fix loaded buttons on chr...
...ome and fix getting suggested posts via API.Wall.getPost

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -202,9 +202,7 @@ routes:
     - url: "/club{num}/setAdmin"
       handler: "Group->modifyAdmin"
     - url: "/club{num}/suggested"
-      handler: "Group->suggestedThisUser"
-    - url: "/club{num}/suggested/all"
-      handler: "Group->suggestedAll"
+      handler: "Group->suggested"
     - url: "/groups{num}"
       handler: "User->groups"
     - url: "/groups_pin"
