--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -341,6 +341,8 @@ routes:
       handler: "Admin->chandlerGroup"
     - url: "/admin/chandler/users/{slug}"
       handler: "Admin->chandlerUser"
+    - url: "/admin/logs"
+      handler: "Admin->logs"
     - url: "/internal/wall{num}"
       handler: "Wall->wallEmbedded"
     - url: "/robots.txt"
