--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -321,12 +321,26 @@ routes:
       handler: "Support->quickBanInSupport"
     - url: "/admin/support/unban/{num}"
       handler: "Support->quickUnbanInSupport"
+    - url: "/admin/support/reports"
+      handler: "Report->list"
+    - url: "/scumfeed"
+      handler: "Report->list"
+    - url: "/admin/report{num}"
+      handler: "Report->view"
+    - url: "/admin/report{num}"
+      handler: "Report->view"
+    - url: "/admin/reportAction{num}"
+      handler: "Report->action"
+    - url: "/report/{num}"
+      handler: "Report->create"
     - url: "/admin/bannedLinks"
       handler: "Admin->bannedLinks"
     - url: "/admin/bannedLink/id{num}"
       handler: "Admin->bannedLink"
     - url: "/admin/bannedLink/id{num}/unban"
       handler: "Admin->unbanLink"
+    - url: "/admin/user{num}/bans"
+      handler: "Admin->bansHistory"
     - url: "/upload/photo/{text}"
       handler: "VKAPI->photoUpload"
     - url: "/method/{text}.{text}"
@@ -341,6 +355,10 @@ routes:
       handler: "Admin->chandlerGroup"
     - url: "/admin/chandler/users/{slug}"
       handler: "Admin->chandlerUser"
+    - url: "/noSpam"
+      handler: "NoSpam->index"
+    - url: "/al_abuse/search"
+      handler: "NoSpam->search"
     - url: "/admin/logs"
       handler: "Admin->logs"
     - url: "/internal/wall{num}"
