--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -195,6 +195,16 @@ routes:
       handler: "Audio->view"
     - url: "/audio{num}_{num}/embed.xhtml"
       handler: "Audio->embed"
+    - url: "/audio{num}/listen"
+      handler: "Audio->listen"
+    - url: "/audios/search"
+      handler: "Audio->search"
+    - url: "/audios/newPlaylist"
+      handler: "Audio->newPlaylist"
+    - url: "/playlist{num}_{num}"
+      handler: "Audio->playlist"
+    - url: "/audio{num}/action"
+      handler: "Audio->action"
     - url: "/{?!club}{num}"
       handler: "Group->view"
       placeholders:
@@ -335,6 +345,12 @@ routes:
       handler: "Admin->bannedLink"
     - url: "/admin/bannedLink/id{num}/unban"
       handler: "Admin->unbanLink"
+    - url: "/admin/music"
+      handler: "Admin->music"
+    - url: "/admin/music/{num}/edit"
+      handler: "Admin->editMusic"
+    - url: "/admin/playlist/{num}/edit"
+      handler: "Admin->editPlaylist"
     - url: "/upload/photo/{text}"
       handler: "VKAPI->photoUpload"
     - url: "/method/{text}.{text}"
