early implementation of photos pickir
Добавлен пикер фоточек и быстрая загрузка фото. Так же пофикшен просмотрщик фото в группах. Но, правда, я сломал копипейст, но это ладн.

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -371,7 +371,7 @@ routes:
       handler: "About->humansTxt"
     - url: "/dev"
       handler: "About->dev"
-    - url: "/iapi/getPhotosFromPost/{text}"
+    - url: "/iapi/getPhotosFromPost/{num}_{num}"
       handler: "InternalAPI->getPhotosFromPost"
     - url: "/tour"
       handler: "About->tour"
