--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -187,8 +187,6 @@ routes:
       handler: "Videos->edit"
     - url: "/video{num}_{num}/remove"
       handler: "Videos->remove"
-    - url: "/player"
-      handler: "Audio->app"
     - url: "/player/upload"
       handler: "Audio->upload"
     - url: "/audios{num}"
@@ -197,8 +195,6 @@ routes:
       handler: "Audio->popular"
     - url: "/audios/new"
       handler: "Audio->new"
-    - url: "/audio{num}_{num}"
-      handler: "Audio->view"
     - url: "/audio{num}_{num}/embed.xhtml"
       handler: "Audio->embed"
     - url: "/audio{num}/listen"
@@ -211,6 +207,10 @@ routes:
       handler: "Audio->apiGetContext"
     - url: "/playlist{num}_{num}"
       handler: "Audio->playlist"
+    - url: "/playlist{num}_{num}/edit"
+      handler: "Audio->editPlaylist"
+    - url: "/playlist{num}/action"
+      handler: "Audio->playlistAction"
     - url: "/playlists{num}"
       handler: "Audio->playlists"
     - url: "/audio{num}/action"
