--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "wapmorgan/binary-stream": "dev-master",
         "al/emoji-detector": "dev-master",
         "ezyang/htmlpurifier": "dev-master",
-        "scssphp/scssphp": "dev-master",
+        "scssphp/scssphp": "dev-main",
         "lfkeitel/phptotp": "dev-master",
         "chillerlan/php-qrcode": "dev-main",
         "vearutop/php-obscene-censor-rus": "dev-master",
