Videos: add window player (#951)
* De#910fy

* Fiksez

* newlines

---------

Co-authored-by: Dmitry Tretyakov <76806170+tretdm@users.noreply.github.com>

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -187,6 +187,8 @@ routes:
       handler: "Videos->edit"
     - url: "/video{num}_{num}/remove"
       handler: "Videos->remove"
+    - url: "/video{num}_{num}/like"
+      handler: "Videos->like"
     - url: "/player/upload"
       handler: "Audio->upload"
     - url: "/audios{num}"
