fix(config): add missing entries

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -104,6 +104,7 @@ openvk:
             fartscroll: false
             testLabel: false
         defaultMobileTheme: ""
+        defaultFeaturePhoneTheme: ""
         logs: true
     
     telemetry:
