--- a/install/automated/docker/openvk.example.yml
+++ b/install/automated/docker/openvk.example.yml
@@ -50,6 +50,8 @@ openvk:
                 - "Good luck filling! If you are a regular support agent, inform the administrator that he forgot to fill the config"
         messages:
             strict: false
+        music:
+            exposeOriginalURLs: true
         wall:
             christian: false
             anonymousPosting:
@@ -101,7 +103,8 @@ openvk:
         bellsAndWhistles:
             fartscroll: false
             testLabel: false
-        defaultMobileTheme: "z"
+        defaultMobileTheme: ""
+        defaultFeaturePhoneTheme: ""
         logs: true
     
     telemetry:
