fix(DateTime): use php81_bc/strftime
Native strftime was deprecated in PHP 8.1 so I replaced it with an
alternative library that uses ICU so that you don't have to set up
locales on your server anymore.
Also this commit removes AM/PM labels as timestamps were in 24h format
anyways, regardless of locale.

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "ext-simplexml": "*",
         "symfony/console": "5.4.x-dev",
         "wapmorgan/morphos": "dev-master",
-        "ext-sodium": "*"
+        "ext-sodium": "*",
+        "php81_bc/strftime": "^0.0.2"
     },
     "minimum-stability": "dev"
 }
