feat(profiles): add ability to crop avatar
Closes #1068 and maybe slash 106

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -181,6 +181,8 @@ routes:
       handler: "Photos->deletePhoto"
     - url: "/al_avatars"
       handler: "User->setAvatar"
+    - url: "/delete_avatar"
+      handler: "User->deleteAvatar"
     - url: "/videos{num}"
       handler: "Videos->list"
     - url: "/videos/upload"
@@ -229,6 +231,8 @@ routes:
       handler: "Group->edit"
     - url: "/club{num}/al_avatar"
       handler: "Group->setAvatar"
+    - url: "/club{num}/delete_avatar"
+      handler: "Group->deleteAvatar"
     - url: "/club{num}/backdrop"
       handler: "Group->editBackdrop"
     - url: "/club{num}/stats"
