--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "require": {
         "php": "~7.3||~8.1",
         "guzzlehttp/guzzle": "^6.5",
-        "komeiji-satori/curl": "dev-master",
         "whichbrowser/parser": "dev-master",
         "james-heinrich/getid3": "^1.9@dev",
         "rybakit/msgpack": "dev-master",
@@ -11,7 +10,7 @@
         "ezyang/htmlpurifier": "dev-master",
         "scssphp/scssphp": "dev-main",
         "lfkeitel/phptotp": "dev-master",
-        "chillerlan/php-qrcode": "dev-main",
+        "chillerlan/php-qrcode": "5.0.2",
         "vearutop/php-obscene-censor-rus": "dev-master",
         "erusev/parsedown": "dev-master",
         "bhaktaraz/php-rss-generator": "dev-master",
@@ -20,7 +19,8 @@
         "symfony/console": "5.4.x-dev",
         "wapmorgan/morphos": "dev-master",
         "ext-sodium": "*",
-        "php81_bc/strftime": "^0.0.2"
+        "php81_bc/strftime": "^0.0.2",
+        "ext-iconv": "*"
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "beta"
 }
