--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -373,6 +373,8 @@ routes:
       handler: "VKAPI->route"
     - url: "/token"
       handler: "VKAPI->tokenLogin"
+    - url: "/authorize"
+      handler: "VKAPI->OAuthLogin"
     - url: "/admin/sandbox"
       handler: "About->sandbox"
     - url: "/admin/chandler/groups"
