--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,7 +34,8 @@ jobs:
       - name: Build base image
         uses: docker/build-push-action@v6
         with:
-          tags: ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/$BASE_IMAGE_NAME:test
+          tags: |
+            ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/$BASE_IMAGE_NAME:test
           platforms: linux/amd64,linux/arm64
           file: install/automated/docker/openvk.Dockerfile
           build-args: |
@@ -43,7 +44,8 @@ jobs:
       - name: Build MariaDB primary image
         uses: docker/build-push-action@v6
         with:
-          tags: ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/$DB_IMAGE_NAME:$DB_VERSION-primary
+          tags: |
+            ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/$DB_IMAGE_NAME:$DB_VERSION-primary
           platforms: linux/amd64,linux/arm64
           file: install/automated/docker/mariadb-primary.Dockerfile
           build-args: |
@@ -52,7 +54,8 @@ jobs:
       - name: Build MariaDB event image
         uses: docker/build-push-action@v6
         with:
-          tags: ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/$DB_IMAGE_NAME:$DB_VERSION-eventdb
+          tags: |
+            ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/$DB_IMAGE_NAME:$DB_VERSION-eventdb
           platforms: linux/amd64,linux/arm64
           file: install/automated/docker/mariadb-eventdb.Dockerfile
           build-args: |
