--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,8 +34,7 @@ jobs:
       - name: Build base image
         uses: docker/build-push-action@v6
         with:
-          tags: |
-            ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/$BASE_IMAGE_NAME:test
+          tags: ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/${{env.BASE_IMAGE_NAME}}:test
           platforms: linux/amd64,linux/arm64
           file: install/automated/docker/openvk.Dockerfile
           build-args: |
@@ -44,19 +43,17 @@ jobs:
       - name: Build MariaDB primary image
         uses: docker/build-push-action@v6
         with:
-          tags: |
-            ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/$DB_IMAGE_NAME:$DB_VERSION-primary
+          tags: ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/${{env.DB_IMAGE_NAME}}:${{env.DB_VERSION}}-primary
           platforms: linux/amd64,linux/arm64
           file: install/automated/docker/mariadb-primary.Dockerfile
           build-args: |
-            VERSION=$DB_VERSION
+            VERSION=${{env.DB_VERSION}}
       
       - name: Build MariaDB event image
         uses: docker/build-push-action@v6
         with:
-          tags: |
-            ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/$DB_IMAGE_NAME:$DB_VERSION-eventdb
+          tags: ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/${{env.DB_IMAGE_NAME}}:${{env.DB_VERSION}}-eventdb
           platforms: linux/amd64,linux/arm64
           file: install/automated/docker/mariadb-eventdb.Dockerfile
           build-args: |
-            VERSION=$DB_VERSION
+            VERSION=${{env.DB_VERSION}}
