ci(actions): use oci export type

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,7 +37,7 @@ jobs:
           tags: ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/${{env.BASE_IMAGE_NAME}}:test
           platforms: linux/amd64,linux/arm64
           file: install/automated/docker/openvk.Dockerfile
-          outputs: type=docker,dest=/tmp/openvk.tar
+          outputs: type=oci,dest=/tmp/openvk.tar
           build-args: |
             GITREPO=${{ steps.repositorystring.outputs.lowercase }}
       
@@ -47,7 +47,7 @@ jobs:
           tags: ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/${{env.DB_IMAGE_NAME}}:${{env.DB_VERSION}}-primary
           platforms: linux/amd64,linux/arm64
           file: install/automated/docker/mariadb-primary.Dockerfile
-          outputs: type=docker,dest=/tmp/mariadb-primary.tar
+          outputs: type=oci,dest=/tmp/mariadb-primary.tar
           build-args: |
             VERSION=${{env.DB_VERSION}}
       
@@ -57,7 +57,7 @@ jobs:
           tags: ghcr.io/${{ steps.repositorystring.outputs.lowercase }}/${{env.DB_IMAGE_NAME}}:${{env.DB_VERSION}}-eventdb
           platforms: linux/amd64,linux/arm64
           file: install/automated/docker/mariadb-eventdb.Dockerfile
-          outputs: type=docker,dest=/tmp/mariadb-eventdb.tar
+          outputs: type=oci,dest=/tmp/mariadb-eventdb.tar
           build-args: |
             VERSION=${{env.DB_VERSION}}
       
