--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -171,6 +171,8 @@ routes:
       handler: "Photos->uploadPhoto"
     - url: "/photo{num}_{num}"
       handler: "Photos->photo"
+    - url: "/photo{num}_{num}/like"
+      handler: "Photos->like"
     - url: "/photos/thumbnails/{num}_{text}.jpeg"
       handler: "Photos->thumbnail"
     - url: "/photos/{text}"
